# zksync-vibebender-metal

./: .dockerignore  .gitignore  Cargo.toml  README.md  _typos.toml  local_diff  recreate_verifiers.sh
.github/workflows/: check-verifiers.yml  ci.yml  test-gpu.yaml  update-verifiers.yml
blake2s_u32/src/: aligned_array.rs  state_with_extended_control.rs
circuit_defs/final_reduced_risc_v_machine/: Cargo.toml
circuit_defs/machine_without_signed_mul_div/: Cargo.toml
circuit_defs/prover_examples/: Cargo.toml
circuit_defs/reduced_risc_v_log_23_machine/: Cargo.toml
circuit_defs/reduced_risc_v_machine/: Cargo.toml
circuit_defs/risc_v_cycles/: Cargo.toml
circuit_defs/setups/: Cargo.toml
common_constants/src/: lib.rs
cs/: Cargo.toml  add_sub_lui_auipc_mop_preprocessed_layout_gkr.json  jump_branch_slt_preprocessed_layout.json  load_store_preprocessed_layout.json  subword_only_load_store_preprocessed_layout.json
cs/compiled_circuits/: add_sub_lui_auipc_mop_preprocessed_layout_gkr.json  add_sub_lui_auipc_mop_preprocessed_ssa_gkr.json  bigint_with_extended_control_layout_gkr.json  bigint_with_extended_control_ssa_gkr.json  blake2_with_extended_control_layout_gkr.json  jump_branch_slt_preprocessed_layout_gkr.json  jump_branch_slt_preprocessed_ssa_gkr.json  shift_binop_preprocessed_layout_gkr.json
cs/src/: constraint.rs  lib.rs  types.rs
docs/: philosophy_and_logic.md  repo_layout.md  tutorial.md
examples/bigint_with_control/: Cargo.toml  app.elf
examples/hashed_fibonacci/: app.elf  app.text
execution_utils/: Cargo.toml
execution_utils/src/: lib.rs  recursion.rs  recursion_strategy.rs  unified_circuit.rs  unrolled.rs  unrolled_gpu.rs
fft/: Cargo.toml
fft/src/: field_utils.rs  utils.rs
field/: Cargo.toml
field/src/: base.rs  field.rs  ops.rs
full_statement_verifier/: Cargo.toml
full_statement_verifier/src/: imports.rs  legacy_circuits.rs  lib.rs  unified_circuit_statement.rs  (+1 more)
gkr/: Cargo.toml  README.md
gkr/src/: circuit.rs  lib.rs  transcript.rs
gkr/src/compiler/: circuit_builder.rs  mod.rs  node.rs  scheduler.rs
gkr/src/poly/: compressed_poly.rs  eq_poly.rs  mod.rs  multilinear.rs  multivariate.rs  sparse_multilinear.rs  univariate.rs
gkr/src/prover/: layer_sumcheck.rs  mod.rs
gkr/src/sumcheck/: batched_sumcheck.rs  mod.rs  multilinear_sumcheck.rs  sumcheck_prover.rs  sumcheck_verifier.rs
gpu_prover/: .gitignore  AGENTS.md  Cargo.toml
gpu_prover_metal/: Cargo.toml  OPTIMIZATION_PLAN.md
gpu_prover_metal/shaders/: arg_utils.metal  barycentric.metal  blake2s.metal  common.metal  context.metal  field.metal  field_test.metal  identity.metal  memory.metal  monolith.metal  ops_complex.metal  ops_simple.metal  stage2.metal  stage3.metal  stage4.metal  vectorized.metal
gpu_prover_metal/shaders/ntt/: b2n.metal  n2b.metal  ntt_common.metal
gpu_prover_metal/shaders/ops_cub/: radix_sort.metal  reduce.metal  rle.metal  scan.metal  scatter.metal
gpu_prover_metal/shaders/witness/: column.metal  common.metal  layout.metal  memory.metal  memory_delegation.metal  memory_main.metal  multiplicities.metal  option.metal  placeholder.metal  ram_access.metal  tables.metal  trace.metal  trace_delegation.metal  trace_main.metal  witness_generation.metal
gpu_prover_metal/shaders/witness/circuits/: bigint_with_control.metal  blake2_with_compression.metal  final_reduced_risc_v_machine.metal  machine_without_signed_mul_div.metal  reduced_risc_v_log_23_machine.metal  reduced_risc_v_machine.metal  risc_v_cycles.metal
gpu_prover_metal/src/: barycentric.rs  blake2s.rs  circuit_type.rs  device_context.rs  device_structures.rs  lib.rs  monolith.rs  ops_complex.rs  ops_simple.rs  tests.rs  utils.rs
gpu_prover_metal/src/allocator/: device.rs  host.rs  mod.rs
gpu_prover_metal/src/execution/: cpu_worker.rs  gpu_manager.rs  gpu_worker.rs  precomputations.rs  prover.rs  tracer.rs
gpu_prover_metal/src/metal_runtime/: buffer.rs  command_queue.rs  device.rs  dispatch.rs  error.rs  memory.rs  mod.rs  pipeline.rs  profiler.rs  sync.rs
gpu_prover_metal/src/ntt/: mod.rs  tests.rs  utils.rs
gpu_prover_metal/src/ops_cub/: device_radix_sort.rs  device_reduce.rs  device_run_length_encode.rs  device_scan.rs  mod.rs  tests.rs
gpu_prover_metal/src/prover/: arg_utils.rs  callbacks.rs  context.rs  memory.rs  mod.rs  pow.rs  precomputations.rs  proof.rs  queries.rs  setup.rs  smoke_test.rs  stage_1.rs  stage_2.rs  stage_2_kernels.rs  stage_3.rs  stage_3_kernels.rs  stage_4.rs  stage_4_kernels.rs  stage_5.rs  trace_holder.rs  tracing_data.rs  transfer.rs
gpu_prover_metal/src/witness/: memory_delegation.rs  memory_main.rs  multiplicities.rs  ram_access.rs  trace_delegation.rs  trace_main.rs  witness_delegation.rs  witness_main.rs
gpu_prover_new/: Cargo.toml
gpu_prover_test/: layouts.json  layouts_recursion_over_base.json  setup.json  setup_recursion_over_base.json
poly/: Cargo.toml
poly/src/: eq_poly.rs  lib.rs  multilinear.rs  split_eq_poly.rs  univariate.rs
prover/: Cargo.toml  add_sub_lui_auipc_mop_gkr_proof.json  add_sub_lui_auipc_mop_preprocessed_generated_gkr.rs  add_sub_lui_auipc_mop_unrolled_proof.json  full_machine_layout.json  inits_and_teardowns_unrolled_proof.json  jump_branch_slt_unrolled_proof.json  keccak_delegation_circuit_layout.json  mul_div_unsigned_unrolled_proof.json  shift_binop_csrrw_unrolled_proof.json  subword_only_load_store_unrolled_proof.json  word_only_load_store_unrolled_proof.json
risc_v_simulator/: Cargo.toml
risc_v_simulator/src/: lib.rs
risc_v_simulator/src/cycle/: state.rs
risc_v_simulator/src/machine_mode_only_unrolled/: mod.rs
risc_v_simulator/src/sim/: diag.rs  mod.rs
riscv_common/: Cargo.toml
riscv_transpiler/: Cargo.toml
sumcheck/: Cargo.toml
sumcheck/src/: batched.rs  dimension_reduction.rs  lib.rs  mle_eval.rs  mle_product.rs
tools/cli/: Cargo.toml  README.md
tools/cli/src/: main.rs  prover_utils.rs
tools/zksmith/: Cargo.toml  README.md
tools/zksmith/src/: main.rs
verifier/: Cargo.toml
verifier_common/: Cargo.toml
verifier_generator/: Cargo.toml
witness_eval_generator/: Cargo.toml
(+463 files in other folders)
