[package]
name = "gkr"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field = { path = "../field" }
transcript = { path = "../transcript"}
rayon = "1.10"

[dev-dependencies]
proptest = "1.9.0"