[package]
name = "gpu_prover"
version.workspace = true
edition.workspace = true
build = "build/main.rs"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
glob = "0.3"

[dependencies]
blake2s_u32 = { workspace = true }
cs = { workspace = true }
fft = { workspace = true }
field = { workspace = true }
prover = { workspace = true, features = ["default"] }
setups = { workspace = true }
trace_and_split = { workspace = true }
worker = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
rayon = "1.11"
transpose = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-metal = "0.3"
block2 = "0.6"
dispatch2 = "0.3"

[features]
default = []
log_gpu_mem_usage = []
log_gpu_stages_timings = []

[dev-dependencies]
execution_utils = { workspace = true }
prover = { workspace = true, features = ["default", "test"] }
rand = { workspace = true, default-features = false }
trace_holder = { workspace = true }
env_logger = "0.11"
serial_test = "3"
