[package]
name = "risc_v_simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv_transpiler = { workspace = true, default-features = false }

[features]
default = []
delegation = ["riscv_transpiler/delegation"]
