[package]
name = "sumcheck"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field = { workspace = true }
poly = { workspace = true }

[dev-dependencies]
rand = { workspace = true }