[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "cli_lib"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
prover = { workspace = true, features = ["prover"] }
trace_and_split = { workspace = true }
setups = { workspace = true }
serde = { workspace = true }
serde_json = "*"
prover_examples = { path = "../../circuit_defs/prover_examples", default-features = false }
worker = {path = "../../worker"}
clap = { workspace = true }
blake2s_u32 = { workspace = true }
execution_utils = { path = "../../execution_utils", default-features = false, features = ["prover", "verifier_binaries"] }
riscv_transpiler = { path = "../../riscv_transpiler" }
field = { workspace = true }

blake2_with_compression_verifier = { path = "../../circuit_defs/blake2_with_compression/verifier", optional = true, default-features = false }

verifier_common = { workspace = true }

full_statement_verifier = { path = "../../full_statement_verifier", default-features = false, optional = true }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
sha3 = { package = "sha3", version = "*" }

gpu_prover = { workspace = true, optional = true, default-features = false }

env_logger = "0.11"
base64 = "0.21.7"


[features]
default = ["security_80"]

security_80 = [
    "execution_utils/security_80",
    "prover_examples/security_80",
    "verifier_common/security_80",
    "gpu_prover?/security_80",
    "full_statement_verifier?/security_80",
    "blake2_with_compression_verifier?/security_80",
]
security_100 = [
    "execution_utils/security_100",
    "prover_examples/security_100",
    "verifier_common/security_100",
    "gpu_prover?/security_100",
    "full_statement_verifier?/security_100",
    "blake2_with_compression_verifier?/security_100",
]

# If include verifiers is disabled, the compilation is a lot faster, but `verify` command is not available.
include_verifiers_80 = [
    "security_80",
    "full_statement_verifier",
    "full_statement_verifier/verifiers",
    "full_statement_verifier/replace_csr",
    "blake2_with_compression_verifier",
    "verifier_common/replace_csr",
    "verifier_common/proof_utils",
    "field/no_inline",
    "execution_utils/verifier_80",
]
include_verifiers_100 = [
    "security_100",
    "full_statement_verifier",
    "full_statement_verifier/verifiers",
    "full_statement_verifier/replace_csr",
    "blake2_with_compression_verifier",
    "verifier_common/replace_csr",
    "verifier_common/proof_utils",
    "field/no_inline",
    "execution_utils/verifier_100",
]
include_verifiers = ["include_verifiers_80"]

debug_logs = ["prover/debug_logs", "prover_examples/debug_logs"]
# if enabled - allow GPU for proving.
gpu = ["prover_examples/gpu", "gpu_prover", "execution_utils/gpu_prover"]
