[package]
name = "zksmith"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "*"
clap = { workspace = true }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
sha3 = { package = "sha3_ce", version = "=0.10.6" }
cli = { path = "../cli", default-features = false }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
env_logger = "0.11"

[features]
# if enabled - allow GPU for proving.
gpu = ["cli/gpu"]
security_80 = ["cli/security_80"]
security_100 = ["cli/security_100"]

default = ["gpu", "security_80"]
